css: Fix nav-pills overflow

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -171,6 +171,7 @@ a.active {
 /* WIDGETS */
 .nav-pills {
   height: 40px;
+  overflow: hidden;
 }
 
 .nav-pills > li > a {
